syntax = "proto3";
package BitCannaGlobal.bcna.bcna;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
// this line is used by starport scaffolding # 1
import "bcna/supplychain.proto";
import "bcna/bitcannaid.proto";

option go_package = "github.com/BitCannaGlobal/bcna/x/bcna/types";

// Query defines the gRPC querier service.
service Query {
    // this line is used by starport scaffolding # 2

	// Queries a supplychain by id.
	rpc Supplychain(QueryGetSupplychainRequest) returns (QueryGetSupplychainResponse) {
		option (google.api.http).get = "/BitCannaGlobal/bcna/bcna/supplychain/{id}";
	}

	// Queries a list of supplychain items.
	rpc SupplychainAll(QueryAllSupplychainRequest) returns (QueryAllSupplychainResponse) {
		option (google.api.http).get = "/BitCannaGlobal/bcna/bcna/supplychain";
	}


	// Queries a bitcannaid by id.
	rpc Bitcannaid(QueryGetBitcannaidRequest) returns (QueryGetBitcannaidResponse) {
		option (google.api.http).get = "/BitCannaGlobal/bcna/bcna/bitcannaid/{id}";
	}

	// Queries a list of bitcannaid items.
	rpc BitcannaidAll(QueryAllBitcannaidRequest) returns (QueryAllBitcannaidResponse) {
		option (google.api.http).get = "/BitCannaGlobal/bcna/bcna/bitcannaid";
	}

}

// this line is used by starport scaffolding # 3
message QueryGetSupplychainRequest {
	uint64 id = 1;
}

message QueryGetSupplychainResponse {
	Supplychain Supplychain = 1;
}

message QueryAllSupplychainRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllSupplychainResponse {
	repeated Supplychain Supplychain = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
message QueryGetBitcannaidRequest {
	uint64 id = 1;
}

message QueryGetBitcannaidResponse {
	Bitcannaid Bitcannaid = 1;
}

message QueryAllBitcannaidRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllBitcannaidResponse {
	repeated Bitcannaid Bitcannaid = 1;
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
